examples/fail/circtype.miniml
let f = fun h x is h h;;

